with Xft.

** New scrolling commands `scroll-up-command' and `scroll-down-command'
(bound to [next] and [prior]) does not signal errors at top/bottom
of buffer at first key-press (instead moves to top/bottom of buffer).

** New scrolling commands `scroll-up-line' and `scroll-down-line'
scroll a line instead of full screen.


* Editing Changes in Emacs 24.1


* Changes in Specialized Modes and Packages in Emacs 24.1

** partial-completion-mode is now obsolete.

** mpc.el: Can use pseudo tags of the form tag1|tag2 as a union of two tags.
** Customize

*** Customize buffers now contain a search field.
The search is performed using `customize-apropos'.
To turn off the search field, set custom-search-field to nil .

*** Custom options now start out hidden if at their default values.
Use the arrow to the left of the option name to toggle visibility.

*** custom-buffer-sort-alphabetically now defaults to t.

*** The color widget now has a "Choose" button, which allows you to
choose a color via list-colors-display.

** VC and related modes

*** New VC commands: vc-log-incoming and vc-log-outgoing.

*** vc-dir for Bzr supports viewing shelve contents and shelving snapshots.

*** Special markup can be added to log-edit buffers.

**** For Bzr, adding an
Author: NAME
line will add "--author NAME" to the "bzr commit" command.

**** For Git, adding an
Author: NAME
line will add "--author NAME" to the "git commit" command.

**** For Hg, adding an
Author: NAME
line will add "--user NAME" to the "hg commit" command.

** Directory local variables can apply to file-less buffers.
For example, adding "(diff-mode . ((mode . whitespace)))" to your
.dir-locals.el file, will turn on `whitespace-mode' for *vc-diff*
buffers.

** s-region.el is now declared obsolete, superceded by shift-select-mode
enabled by default in 23.1.

** gdb-mi

*** GDB User Interface migrated to GDB Machine Interface and now
supports multithread non-stop debugging and debugging of several
threads simultaneously.
